--- a/shopify.css
+++ b/shopify.css
@@ -2,27 +2,25 @@
     .nonedesktop {
         display: none;
     }
-    body :not(#deskmsg, #deskmsg > h2, #deskmsg > h6, #deskmsg > a) {
+    #body {
         display: none;
     }
     body {
-        margin: 0;
-        padding: 0;
-        background-image: url('images/flat-engineering-construction-illustrated_23-2148892788.jpg');
-        background-size: cover;
+        background-color: white;
     }
+
     #deskmsg {
-        position: absolute;
-        top: 10%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
         color: black;
         font-size: 24px;
-        margin-top: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
-    #deskmsg > h2 {
-        width: 90%;
+    #deskmsg > img {
+        margin-top: 20%;
+        width: 50%;
+        height: auto;
     }
     #row1 {
         display: flex;
@@ -193,21 +191,25 @@
        margin-top: 70px;
        margin-bottom: px;
     }
-    
-    
-}
-
-
-
-body {
+    body {
     margin: 0;
     text-align: center;
     font-family: sans-serif;
     text-decoration: ;
     background-color: #F0FFF8;
 }
+    
+}
+
+
+
+
 #row1 {
     background-color: white;
+    width: 100%;
+    height: 120px;
+    position: fixed;
+    top: 0;
 }
 #xrow {
         width: px;
@@ -215,7 +217,7 @@ body {
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-top: 10px;
+        margin-top: 0px;
         padding-top: 0px;
     }
     #xrow > h4 {
@@ -284,7 +286,7 @@ body {
         padding-top: 15px;
         padding-bottom: 15px;
     }
-    .plus {
+.plus {
         width: 80%;
         text-align: left;        
         margin-left: 3%;
@@ -367,6 +369,7 @@ body {
     }
 #topgrad {
     background: linear-gradient(to bottom, #B4EEFA 0%, #C4EEF4 50%, #F0FFF8 100%);
+    margin-top: 120px;
 }
 img {
     max-width: 100%;
@@ -378,7 +381,7 @@ img {
     height: 30px;
     background-color: #000000;
     color: white;
-    border: none;
+    border: 2px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -391,7 +394,7 @@ img {
     width: 30px;
     height: 30px;
     background-color: #000000;      color: white;
-    border: none;
+    border: 2px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -404,7 +407,7 @@ img {
     height: 30px;
     background-color: #000000;
     color: white;
-    border: none;
+    border: 2px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -417,7 +420,7 @@ img {
     height: 30px;
     background-color: #000000;
     color: white;
-    border: none;
+    border: 2px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -460,4 +463,5 @@ img {
     width: 80%;
     margin-left: 4%;
     text-align: left;
-}
+            }
+    
