--- a/shopify.css
+++ b/shopify.css
@@ -6,19 +6,10 @@
         display: none;
     }
     body {
-      /*  margin: 0;
-        padding: 0;
-        background-image: url('images/flat-engineering-construction-illustrated_23-2148892788.jpg');
-        background-size: cover; */
         background-color: white;
     }
 
     #deskmsg {
-       /* position: absolute;
-        top: 10%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center; */
         color: black;
         font-size: 24px;
         display: flex;
@@ -97,11 +88,7 @@
         font-size: 13px;
         line-height: 18px;
     }
-    
-    h6 {
-    }
-    .formdiv {
-    }
+    .formdiv {}    
     #lappy {
         width: 76%;
         height: auto;
@@ -113,9 +100,7 @@
         justify-content: center;
         align-items: center;
     }
-    #allicons {
-
-    }
+    #allicons {}
     .leftalign {
         text-align: left;
         margin-left: 4%;
@@ -152,8 +137,6 @@
         margin-bottom: 2px;
         margin-top: 9px;
     }
-    
-    
     .line {
         height: 0px;
         width: 92%;
@@ -162,13 +145,10 @@
         border-bottom: none;
         border-left: none;
         border-right: none;
-        margin-left: 4%;
-        margin-right: 4%;
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin-inline: 4%;
+        margin-block: 10px;
         padding: none;
     }
-    
     .separatebg > h1 {
         padding-bottom: 5px;
         line-height: 30px;
@@ -206,7 +186,7 @@
     font-family: sans-serif;
     text-decoration: ;
     background-color: #F0FFF8;
-}
+    }
     
 }
 
@@ -220,7 +200,7 @@
     position: fixed;
     top: 0;
 }
-#xrow {
+    #xrow {
         width: px;
         height: px;
         display: flex;
@@ -265,17 +245,7 @@
         color: white;
         text-decoration: none;
         font-weight: 800;
-    }
-    #sbtt > a {
-        color: white;
-        text-decoration: none;
-        margin: 0px;
-        padding-left: 25px;
-        padding-right: 25px;
-        padding-top: 15px;
-        padding-bottom: 15px;
-        width: ;
-    }    
+    }  
     #lmbtt {
         background-color: white;
         color: black;
@@ -290,7 +260,7 @@
         font-weight: 800;
         text-decoration: none;
     }
-.plus {
+    .plus {
         width: 80%;
         text-align: left;        
         margin-left: 3%;
@@ -312,20 +282,6 @@
         align-content: center;
         vertical-align: center;
     }
-    .button {
-        background-color: black;
-        box-sizing: border-box;      
-        min-height: 55px; 
-        min-width: 88%;
-        border-r        adius: 50px;
-        margin-bottom: 2px;
-        cursoinline
-        ln-items: center;        -inline: 6%;
-        text-decoration: none;
-        font-size: 15px;
-        color: white;
-        font-weight: normal;
-    }
     input[type="email"]:hover {
         border-color: blueviolet;
     }
@@ -337,18 +293,17 @@
         height: 55px; 
         display: block;
         border-radius: 50px;     
-        border: 1px solid grey;
+        border: 2px solid black;
         margin-bottom: 10px;
-        margin-right: 6%;
         margin-inline: 6%;
-        padding-left: 10%;
+        padding-left: 8%;
         }
-        .formbutton {
-           width: 88%;
-           height: 55px;  
-           display: flex;
-           justify-content: center;
-           align-items: center;
+       .formbutton {
+        width: 88%;
+        height: 55px;  
+        display: flex;
+        justify-content: center;
+        align-items: center;
         border-radius: 50px; 
         margin-inline: 6%;
         text-decoration: none;
@@ -357,15 +312,13 @@
         font-size: 16px;
         font-weight: normal;
         }
-    .a {
+        .a, .a > a {
         margin-bottom: 130px;
         margin-top: 40px;
-    }
-    .a > a {
         font-size: 16px;
         font-weight: 780;
         color: black;
-    }
+        }
 #topgrad {
     background: linear-gradient(to bottom, #B4EEFA 0%, #C4EEF4 50%, #F0FFF8 100%);
     margin-top: 130px;
@@ -374,8 +327,7 @@ img {
     max-width: 100%;
     height: auto;
 }
-
-#toggle-button {
+#toggle-button, #toggle-button2, #toggle-button3, #toggle-button4 {
     width: 30px;
     height: 30px;
     background-color: #000000;
@@ -385,63 +337,12 @@ img {
     align-items: center;
     justify-content: center;
     border-radius: 50px;
-    font-size: 30px;
-            
-}
-        
-#toggle-button2 {
-    width: 30px;
-    height: 30px;
-    background-color: #000000;      color: white;
-    border: 2px solid black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50px;
-    font-size: 30px;
-            
-}
-#toggle-button3 {
-    width: 30px;
-    height: 30px;
-    background-color: #000000;
-    color: white;
-    border: 2px solid black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50px;
-    font-size: 30px;
-            
-}
-#toggle-button4 {
-    width: 30px;
-    height: 30px;
-    background-color: #000000;
-    color: white;
-    border: 2px solid black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50px;
-    font-size: 30px;
-            
-}
-        
-#additional-text {
+    font-size: 30px;        
+}   
+#additional-text, #additional-text2, 
+#additional-text3, #additional-text4 {
     display: none;
-}
-#additional-text2 {
-    display: none;
-}
-#additional-text3 {
-    display: none;
-}
-#additional-text4 {
-    display: none;
-}
-        
-        
+}     
 .can {
     display: flex;
     justify-content: space-between;
@@ -463,4 +364,4 @@ img {
     margin-left: 4%;
     text-align: left;
         }
-    
+                        
